--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@lit/context": "^1.1.0",
     "@shoelace-style/shoelace": "^2.4.0",
     "@thepassle/app-tools": "^0.9.9",
+    "axios": "^1.6.2",
     "firebase": "^10.6.0",
     "firebaseui": "^6.1.0",
     "leaflet": "^1.9.4",
