--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.10.0",
     "eslint-plugin-lit": "^1.10.1",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-wc": "^2.0.4",
     "prettier": "^3.1.0",
     "typescript": "^5.0.4",
