--- a/.eslintrc
+++ b/.eslintrc
@@ -2,15 +2,15 @@
   "extends": [
     "eslint:recommended",
     "plugin:lit/recommended",
-    "plugin:wc/recommended",
-    "plugin:unused-imports"
-  ],
-  "rules": {
-    "no-unused-vars": "off", // or "@typescript-eslint/no-unused-vars": "off",
-    "unused-imports/no-unused-imports": "error",
-    "unused-imports/no-unused-vars": [
-      "warn",
-      { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
-    ]
-  }
+    "plugin:wc/recommended"
+    // "plugin:unused-imports"
+  ]
+  // "rules": {
+  //   "no-unused-vars": "warn", // or "@typescript-eslint/no-unused-vars": "off",
+  //   "unused-imports/no-unused-imports": "error",
+  //   "unused-imports/no-unused-vars": [
+  //     "warn",
+  //     { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+  //   ]
+  // }
 }
