--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "short_name": "puppyhouse",
   "theme_color": "#0284c7",
   "description": "",
-  "orientation": "any",
+  "orientation": "portrait",
   "background_color": "#0284c7",
   "related_applications": [],
   "prefer_related_applications": false,
