Add DigitalGoods get

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,6 +15,16 @@
   "launch_handler": {
     "client_mode": "focus-existing"
   },
+  "features": ["Cross Platform", "fast", "simple",{
+    "playBilling": {
+      "enabled": true
+    }
+  }],
+  "categories": ["social"],
+  "enableNotifications": true,
+  "alphaDependencies": {
+    "enabled": true
+  },
   "icons": [
     {
       "src": "assets/icons/512x512.png",
@@ -44,8 +54,6 @@
       "type": "image/png"
     }
   ],
-  "features": ["Cross Platform", "fast", "simple"],
-  "categories": ["social"],
   "shortcuts": [
     {
       "name": "Open About",
