--- a/public/manifest.json
+++ b/public/manifest.json
@@ -22,6 +22,7 @@
   }],
   "categories": ["social"],
   "enableNotifications": true,
+  "enableLocalization": true,
   "alphaDependencies": {
     "enabled": true
   },
