--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "esnext",
     "target": "esnext",
-    "lib": ["es2015", "es2017", "esnext", "dom", "dom.iterable"],
+    "lib": ["es2015", "es2017", "ES2018", "esnext", "dom", "dom.iterable"],
     "declaration": true,
     "emitDeclarationOnly": true,
     "outDir": "./types",
@@ -30,5 +30,5 @@
     ]
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/scripts/leaflet-canvas-markers.js"]
 }
