--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@lit/context": "^1.1.0",
+    "@microsoft/signalr": "^8.0.0",
     "@shoelace-style/shoelace": "^2.4.0",
     "axios": "^1.6.2",
     "firebase": "^10.6.0",
@@ -32,6 +33,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.10.0",
+    "@types/signalr": "^2.4.3",
     "eslint-plugin-lit": "^1.10.1",
     "eslint-plugin-wc": "^2.0.4",
     "prettier": "^3.1.0",
