--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,10 @@
   "display": "standalone",
   "start_url": "/",
   "short_name": "puppyhouse",
-  "theme_color": "#fff5ef",
+  "theme_color": "#ff6100",
   "description": "",
   "orientation": "portrait",
-  "background_color": "#fff5ef",
+  "background_color": "#ff6100",
   "related_applications": [],
   "prefer_related_applications": false,
   "display_override": ["window-controls-overlay"],
@@ -33,22 +33,22 @@
   },
   "icons": [
     {
-      "src": "assets/icons/512x512.png",
+      "src": "assets/icons/android-launchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/192x192.png",
+      "src": "assets/icons/android-launchericon-192-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/48x48.png",
+      "src": "assets/icons/android-launchericon-48-48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/24x24.png",
+      "src": "assets/icons/2android-launchericon-48-48.png",
       "sizes": "24x24",
       "type": "image/png"
     }
