--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "tsc && vite build",
     "start": "npm run dev",
     "start-remote": "vite --host",
-    "pretty": "npx prettier . --write",
-    "prepare": "husky"
+    "pretty": "npx prettier . --write"
   },
   "author": "",
   "license": "ISC",
@@ -37,7 +36,6 @@
     "@types/signalr": "^2.4.3",
     "eslint-plugin-lit": "^1.10.1",
     "eslint-plugin-wc": "^2.0.4",
-    "husky": "^9.1.7",
     "prettier": "^3.1.0",
     "ts-lit-plugin": "^2.0.1",
     "typescript": "^5.0.4",
