--- a/.eslintrc
+++ b/.eslintrc
@@ -1,22 +1,25 @@
 {
-  "extends": ["eslint:recommended", "plugin:lit/recommended", "plugin:wc/recommended"],
-  "parserOptions": { "ecmaVersion": 2015 },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:lit/recommended",
+    "plugin:wc/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "unused-imports"],
+  "parserOptions": { "ecmaVersion": 2015, "sourceType": "module" },
   "env": {
     "browser": true,
     "amd": true,
     "node": true
+  },
+  "rules": {
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
+    ]
   }
 }
-
-// "plugin:unused-imports"
-
-// "rules": {
-//   "no-unused-vars": "warn", // or "@typescript-eslint/no-unused-vars": "off",
-//   "unused-imports/no-unused-imports": "error",
-//   "unused-imports/no-unused-vars": [
-//     "warn",
-//     { "vars": "all", "varsIgnorePattern": "^_", "args": "after-used", "argsIgnorePattern": "^_" }
-//   ]
-
-
-// }
