--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "@types/leaflet": "^1.9.8",
     "@types/node": "^20.10.0",
     "@types/signalr": "^2.4.3",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
     "eslint-plugin-lit": "^1.10.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "eslint-plugin-wc": "^2.0.4",
     "prettier": "^3.1.0",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "ts-lit-plugin": "^2.0.1",
     "typescript": "^5.0.4",
     "vite": "^5.0.2",
