--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,10 @@
   "display": "standalone",
   "start_url": "/",
   "short_name": "puppyhouse",
-  "theme_color": "#ff6100",
+  "theme_color": "#52b788",
   "description": "",
   "orientation": "portrait",
-  "background_color": "#ff6100",
+  "background_color": "#f2fbf5",
   "related_applications": [],
   "prefer_related_applications": false,
   "display_override": ["window-controls-overlay"],
