--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "start_url": "/",
   "short_name": "puppyhouse",
-  "theme_color": "#52b788",
+  "theme_color": "#2f6f52",
   "description": "",
   "orientation": "portrait",
   "background_color": "#f2fbf5",
