--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,10 +5,10 @@
   "display": "standalone",
   "start_url": "/",
   "short_name": "puppyhouse",
-  "theme_color": "#22b889",
+  "theme_color": "#16c38a",
   "description": "",
   "orientation": "portrait",
-  "background_color": "#ecfdf5",
+  "background_color": "#16c38a",
   "related_applications": [],
   "prefer_related_applications": false,
   "display_override": ["window-controls-overlay"],
@@ -33,29 +33,29 @@
   },
   "icons": [
     {
-      "src": "assets/icons/512x512.png",
+      "src": "assets/icons/logo_512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/192x192.png",
+      "src": "assets/icons/logo_512.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/48x48.png",
+      "src": "assets/icons/logo_512.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "assets/icons/48x48.png",
+      "src": "assets/icons/logo_512.png",
       "sizes": "24x24",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "assets/screenshots/screen.png",
+      "src": "assets/icons/logo_512.png",
       "sizes": "1617x1012",
       "type": "image/png"
     }
@@ -66,7 +66,7 @@
       "short_name": "About",
       "description": "Open the about page",
       "url": "/about",
-      "icons": [{ "src": "assets/icons/192x192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "assets/icons/logo_512.png", "sizes": "192x192" }]
     }
   ],
   "widgets": [
@@ -78,14 +78,14 @@
       "description": "A simple widget example from pwa-starter.",
       "screenshots": [
         {
-          "src": "assets/screenshots/widget-screen.png",
+          "src": "assets/icons/logo_512.png",
           "sizes": "500x500",
           "label": "Widget screenshot"
         }
       ],
       "icons": [
         {
-          "src": "assets/icons/48x48.png",
+          "src": "assets/icons/logo_512.png",
           "sizes": "48x48"
         }
       ]
